--- a/05ex_Pandas.ipynb
+++ b/05ex_Pandas.ipynb
@@ -32,7 +32,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# seems like the ghost file has this structure\n",
+    "# FPGA TDC_Channel ORBIT_CNT BTX_COUNTER TDC_MEAS HEAD\n",
+    "# the last column HEAD comes from point 5?\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "N = 10000 # don't know how many rows there are in the ghost file, i assume 10k\n",
+    "\n",
+    "df = pd.read_cvs(\"path_to_file_which_does_not_exists/data_000637.txt\", nrows = N)\n",
+    "\n",
+    "x = df[\"BX_COUNTER\"].max()+1\n",
+    "\n",
+    "# since i do not even have the file, i am forced to perform an estimate\n",
+    "# let N_tot be the total number of rows in the ghost file\n",
+    "\n",
+    "N_tot = 1 # to be replaced with the real value which i assume is known\n",
+    "\n",
+    "df[\"t\"] = df[\"TDC_MEAS\"]*25/30 + df[\"BTX_COUNTER\"]*25 + df[\"ORBIT_CNT\"]*x*25\n",
+    "\n",
+    "T_tot = ( df.iat[N-1, 6] - df.iat[0, 6] ) * ( N_tot / N ) # maybe the first read does not start with t = 0? who knows?\n",
+    "\n",
+    "np.random.seed(21)\n",
+    "df[\"HEAD\"] = pd.Series(np.random.randint(0, 2), df.index)\n",
+    "\n",
+    "df_1 = df[df[\"HEAD\"] == 1]\n",
+    "\n",
+    "fpga_0 = df[df[\"FPGA\"] == 0][\"TDC_Channel\"]\n",
+    "fpga_1 = df[df[\"FPGA\"] == 1][\"TDC_Channel\"]\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.hist(fpga_0)\n",
+    "plt.show()\n",
+    "plt.hist(fpga_1)\n",
+    "plt.show()\n",
+    "\n",
+    "noise = pd.DataFrame(df.groupby(\"TDC_Channel\").count()).reset_index()\n",
+    "noise.sort_values(by=[\"FPGA\"], ascending=False).head(3)\n",
+    "\n",
+    "df[\"ORBIT_CNT\"].nunique()\n",
+    "df[df[\"TDC_Channel\"] == 139][\"ORBIT_CNT\"].nunique()"
+   ]
   }
  ],
  "metadata": {
@@ -51,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
